[project]
name = "gunicorn-asgi-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncio>=4.0.0",
    "asyncmy2>=0.2.20",
    "cryptography>=46.0.4",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "gunicorn>=25.0.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]
